# TRUST_MCNet

./: .gitignore  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  FLWR_INTEGRATION.md  LICENSE  Makefile  PIPELINE_FLOW.md  QUICKSTART.md  README.md  RESTRUCTURING_SUMMARY.md  SIMULATION_GUIDE.md  TRUST_MCNet_Analysis_Report.md  main.py  requirements.txt  setup.py  setup_flwr.sh
TRUST_MCNet_Redesigned/: IMPLEMENTATION_SUMMARY.md  README.md  REFACTORED_ARCHITECTURE.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  demo_enhanced_explainability.py  demo_refactored.py  enhanced_simulation.py  examples.py  pyproject.toml  requirements.txt  run_multi_dataset_simulation.py  run_refactored.py  simulation.py  test_refactored_architecture.py  train.py  train_refactored.py  validate_architecture.py
TRUST_MCNet_Redesigned/clients/: __init__.py  enhanced_ray_client.py  ray_flwr_client.py
TRUST_MCNet_Redesigned/clients_new/: __init__.py
TRUST_MCNet_Redesigned/config/: config.yaml  schemas.py
TRUST_MCNet_Redesigned/config/dataset/: iot_general.yaml  mnist.yaml
TRUST_MCNet_Redesigned/config/model/: iot_mlp.yaml
TRUST_MCNet_Redesigned/config/ray/: local.yaml
TRUST_MCNet_Redesigned/config/strategy/: fedadam.yaml  fedprox.yaml
TRUST_MCNet_Redesigned/config/training/: multi_epoch.yaml
TRUST_MCNet_Redesigned/config/trust/: cosine.yaml  entropy.yaml  hybrid.yaml
TRUST_MCNet_Redesigned/core/: __init__.py  exceptions.py  interfaces.py  types.py
TRUST_MCNet_Redesigned/experiments/: __init__.py
TRUST_MCNet_Redesigned/explainability/: README.md  shap_explainer.py  trust_attribution.py  visualization_manager.py
TRUST_MCNet_Redesigned/logs/federated_experiment_1751566188/: final_metrics.json  metrics.csv  metrics.json
TRUST_MCNet_Redesigned/logs/federated_experiment_1751566291/: final_metrics.json  metrics.csv  metrics.json
TRUST_MCNet_Redesigned/logs/federated_experiment_1751566381/: final_metrics.json  metrics.csv  metrics.json
TRUST_MCNet_Redesigned/logs/federated_experiment_1751647873/: final_metrics.json  metrics.csv  metrics.json
TRUST_MCNet_Redesigned/logs/federated_experiment_1751647936/: final_metrics.json  metrics.csv  metrics.json
TRUST_MCNet_Redesigned/logs/federated_experiment_1751648089/: final_metrics.json  metrics.csv  metrics.json
TRUST_MCNet_Redesigned/logs/federated_experiment_1751648231/: final_metrics.json  metrics.csv  metrics.json
TRUST_MCNet_Redesigned/metrics/: __init__.py
TRUST_MCNet_Redesigned/models/: __init__.py  model.py
TRUST_MCNet_Redesigned/models_new/: __init__.py
TRUST_MCNet_Redesigned/outputs/2025-07-03/22-08-11/.hydra/: config.yaml  hydra.yaml  overrides.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-03/22-10-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-03/23-39-48/.hydra/: hydra.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-03/23-41-31/.hydra/: hydra.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-03/23-43-01/.hydra/: config.yaml  hydra.yaml  overrides.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-03/23-44-02/.hydra/: config.yaml  hydra.yaml  overrides.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-03/23-44-25/.hydra/: config.yaml  hydra.yaml  overrides.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-04/22-21-13/.hydra/: hydra.yaml  overrides.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-04/22-22-16/.hydra/: config.yaml  hydra.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-04/22-24-49/.hydra/: hydra.yaml  overrides.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-04/22-27-11/.hydra/: config.yaml  hydra.yaml
TRUST_MCNet_Redesigned/outputs/2025-07-06/16-55-22/.hydra/: config.yaml  hydra.yaml  overrides.yaml
TRUST_MCNet_Redesigned/partitioning/: __init__.py
TRUST_MCNet_Redesigned/tests/: test_dataset_registry.py  test_models.py  test_smoke.py
TRUST_MCNet_Redesigned/trust-mcnet-dynamic/config/: config.yaml
TRUST_MCNet_Redesigned/trust-mcnet-dynamic/src/config/: __init__.py
TRUST_MCNet_Redesigned/trust-mcnet-dynamic/src/core/: __init__.py  interfaces.py
TRUST_MCNet_Redesigned/trust-mcnet-dynamic/src/strategies/: __init__.py  base_strategy.py
TRUST_MCNet_Redesigned/trust-mcnet-dynamic/src/trust_module/: __init__.py  registry.py  rho_adaptor.py  trust_evaluator.py
TRUST_MCNet_Redesigned/trust-mcnet-dynamic/tests/: test_strategies.py
TRUST_MCNet_Redesigned/trust_module/: __init__.py  trust_evaluator.py
TRUST_MCNet_Redesigned/trust_new/: __init__.py
TRUST_MCNet_Redesigned/utils/: dataset_registry.py
(+95 files in other folders)
